5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1667_2318.log
== TEST (2019-04-16 16:05:54) 
-- CODE:
a=input("patrono:")

ms=20.114
ss=0.4379
ps=ms*ss
mv=19.984
sv=4.289
pv=mv*sv
print(ps)
-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:06:20) 
-- CODE:
a=input("patrono:")

ms=20.114
ss=0.4379
ps=ms/ss
mv=19.984
sv=4.289
pv=mv*sv
print(ps)
-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:47) 
-- CODE:
a=input("patrono:")

if(a.upper()=="SNAPE")
	ms=20.114
	ss=0.4379
	p=ms/ss
else:
	mv=19.984
	sv=4.289
	p=mv/sv
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=="SNAPE")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:22) 
-- CODE:
a=input("patrono:")

if(a.upper()=="snape")
	ms=20.114
	ss=0.4379
	p=ms/ss
else:
	mv=19.984
	sv=4.289
	p=mv/sv
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=="snape")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:53) 
-- CODE:
a=input("patrono:")

if(a.upper()=='snape')
	ms=20.114
	ss=0.4379
	p=ms/ss
else:
	mv=19.984
	sv=4.289
	p=mv/sv
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=='snape')
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:35) 
-- CODE:
a=input("patrono:")

if(a.upper()=="SNAPE")
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=="SNAPE")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:36) 
-- CODE:
a=input("patrono:")

if(a.upper()=="SNAPE")
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=="SNAPE")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:37) 
-- CODE:
a=input("patrono:")

if(a.upper()=="SNAPE")
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=="SNAPE")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:37) 
-- CODE:
a=input("patrono:")

if(a.upper()=="SNAPE")
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=="SNAPE")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:37) 
-- CODE:
a=input("patrono:")

if(a.upper()=="SNAPE")
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=="SNAPE")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:37) 
-- CODE:
a=input("patrono:")

if(a.upper()=="SNAPE")
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()=="SNAPE")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:10:43) 
-- CODE:
a=input("patrono:")

if(a.upper()== "SNAPE" )
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- EXECUTION TIME:
0.137455
-- ERROR:
  File "/home/codebench/codes/1667/2318/main.py", line 3
    if(a.upper()== "SNAPE" )
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:44) 
-- CODE:
a=input("patrono:")

if(a.upper()== "SNAPE" )
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- ERROR:
File "XXXX", line 3
    if(a.upper()== "SNAPE" )
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:10:58) 
-- CODE:
a=input("patrono:")

if(upper().a== "SNAPE" )
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- EXECUTION TIME:
0.180232
-- ERROR:
  File "/home/codebench/codes/1667/2318/main.py", line 3
    if(upper().a== "SNAPE" )
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:58) 
-- CODE:
a=input("patrono:")

if(upper().a== "SNAPE" )
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- ERROR:
File "XXXX", line 3
    if(upper().a== "SNAPE" )
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:11:10) 
-- CODE:
a=input("patrono:")

if(a.upper()== "SNAPE" ):
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- EXECUTION TIME:
0.150573
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
0.004650967591513173
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:12) 
-- CODE:
a=input("patrono:")

if(a.upper()== "SNAPE" ):
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:11:32) 
-- CODE:
a=input("patrono:")

if(a.upper()== "SNAPE" ):
	p=20.114/0.4379
else:
	p=19.948/4289
print(p)
-- EXECUTION TIME:
0.118209
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
0.004650967591513173
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:12:04) 
-- CODE:
a=input("patrono:")

if(a.upper()== "SNAPE" ):
	p=20.114/0.4379
else:
	p=19.948/0.4289
print(p)
-- EXECUTION TIME:
0.12253
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
46.50967591513173
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:37) 
-- CODE:
a=input("patrono:")

if(a.upper()== "SNAPE" ):
	m=20.114
	s=0.4379
	p=m/s
else:
	
	m=19.984
	s=4.289
	p=m/s
print(p)
-- EXECUTION TIME:
0.197769
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
4.6593611564467246
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
